--- a/templates/token.html
+++ b/templates/token.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Token Page</title>
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
     <h1>Ваш токен:</h1>
