--- a/templates/wrong.html
+++ b/templates/wrong.html
@@ -10,5 +10,6 @@
         <p>Ваш токен недействителен</p>
         <p>Пожалуйста, получите новый</p>
     </div>
+    <a href="http://0.0.0.0:8000/" class="button">Перейти на страницу входа</a>
 </body>
 </html>
